--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -16,14 +16,14 @@
         android:textSize="60sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="24dp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:gravity="center_horizontal"
         android:text="funny comment"
         android:layout_marginLeft="15dp"
@@ -37,24 +37,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="Your score: "
-        android:textColor="@android:color/secondary_text_light"
-        android:id="@+id/score_text"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal"
+        android:textSize="70sp"
+        android:text="235"
+        android:id="@+id/score_text2"
+        android:textColor="#0D47A1"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="Best score: "
-        android:textColor="@android:color/secondary_text_light"
+        android:textColor="@android:color/primary_text_light"
         android:id="@+id/best_score_text"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="30dp"
         />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,14 +64,13 @@
         android:text="You have tapped"
         android:textColor="@android:color/secondary_text_light"
         android:id="@+id/all_taps"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         />
 
     <TextView
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:text="Play Again"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
         android:textSize="30sp"
         android:textAllCaps="false"
         android:id="@+id/button"
@@ -79,8 +80,10 @@
         android:textStyle="bold"
         android:background="@drawable/play_button_drawable"
         android:translationZ="16dp"
-        android:padding="8dp"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
         android:onClick="playAgain"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="20dp"
+        android:text="Play Again" />
 
 </LinearLayout>
