--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -61,16 +61,17 @@
         android:textStyle="bold|italic"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:id="@+id/score_text"
         android:text="0"
         android:textColor="@android:color/primary_text_light"
         android:textSize="35dp"
-        android:elevation="700dp"
+        android:elevation="50dp"
+        android:gravity="center"
         android:textStyle="bold"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
         android:layout_marginTop="40dp"/>
 
 
