--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -1,11 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#b5ecea"
     tools:context="com.example.or.makeitwhite.GameOverActivity">
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#ff0000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="-10dp"
+        android:layout_marginLeft="-40dp"/>
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#00E5FF"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="10dp"
+        />
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#ff0000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="230dp"
+        android:layout_marginRight="-40dp"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:tint="#76FF03"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="-20dp"
+        android:layout_marginRight="80dp"
+        />
+    <ImageView
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:tint="#00E5FF"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="-20dp"
+        android:layout_marginLeft="100dp"
+        />
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#E040FB"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="20dp"
+        />
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/item_drawable"
+        android:tint="#76FF03"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginRight="30dp"
+        />
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:tint="#76FF03"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="180dp"
+        android:layout_marginLeft="90dp"
+        />
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:tint="#E040FB"
+        android:src="@drawable/item_drawable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="350dp"
+        android:layout_marginLeft="-50dp"
+        />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentStart="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +134,7 @@
         android:textSize="70sp"
         android:text="235"
         android:id="@+id/score_text2"
-        android:textColor="#0D47A1"
+        android:textColor="#2962FF"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:textStyle="bold"
@@ -88,3 +182,7 @@
         android:text="Play Again" />
 
 </LinearLayout>
+
+
+
+</RelativeLayout>
