--- a/app/src/main/res/layout/game_over_layout.xml
+++ b/app/src/main/res/layout/game_over_layout.xml
@@ -109,15 +109,15 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="79dp"
+            android:layout_height="106dp"
             android:textSize="22sp"
             android:gravity="center_horizontal"
-            android:text="funny comment dasdas dasdas sada asdas asdasd asdasd dasdas asdasd asdads"
+            android:text="funny comment gggg gggg dasdas dasdas sada asdas asdasd asdasd dasdas asdasd asdads"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:textColor="#FF5722"
             android:id="@+id/funny_comment"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             />
 
@@ -129,7 +129,7 @@
             android:id="@+id/score_text2"
             android:textColor="#2962FF"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:textStyle="bold"
             />
 
@@ -153,6 +153,7 @@
             android:textColor="@android:color/secondary_text_light"
             android:id="@+id/all_taps"
             android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"
             />
 
